syntax = "proto3";

package com.chris.proto;

option java_package = "com.chris.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService {
    rpc GetRealNameByName(MyRequest) returns (MyResponse) {}

    rpc GetStudentsByAge(StudentRequest) returns (stream StudentResponse) {}
}

message MyRequest {
    string name = 1;
}

message MyResponse {
    string real_name = 2;
}

message StudentRequest {
    int32 age = 1;
}

message StudentResponse {
    string name = 1;
    int32 age = 2;
    string city = 3;
}